# agent-workflow-review

./: .gitignore  README.md  pyproject.toml
docs/: concepts.md  configuration.md  debug-runbook-bridge.md  safety.md  subject-discrimination.md
examples/session-review/: review-profile.toml  reviewer-pack.toml
examples/session-review/sessions/: redacted-session.jsonl
examples/subject-review/server-ssh/: expected-discrimination-report.md  objective.toml  signal-pack.toml  subject.toml
examples/subject-review/server-ssh/sessions/: git-ssh-negative.jsonl  mixed-ssh.jsonl  server-ssh-positive.jsonl
examples/subject-review/vpn-tool/: expected-episodes.json  expected-subject-review-report.md  objective.toml  subject.toml
examples/subject-review/vpn-tool/sessions/: redacted-cross-project-a.jsonl  redacted-cross-project-b.jsonl
src/session_review/: __init__.py  candidates.py  cli.py  config.py  models.py  packets.py  safety.py
src/session_review/adapters/: __init__.py  codex_jsonl.py
src/session_review/exporters/: __init__.py  debug_runbook.py
src/session_review/reviewers/: __init__.py  builtin.py
src/session_review/subject/: __init__.py  collectors.py  config.py  discriminators.py  exporters.py  models.py  prompts.py  review.py
tests/: test_session_review_adapter.py  test_session_review_cli.py  test_session_review_models.py  test_session_review_pipeline.py  test_subject_discriminator_cli.py  test_subject_review_cli.py
